[gd_scene load_steps=3 format=3 uid="uid://c746veg85j34f"]

[ext_resource type="Script" path="res://asteroid.gd" id="1_2mulq"]
[ext_resource type="Script" path="res://polyline2d.gd" id="2_r6ng3"]

[node name="Asteroid" type="RigidBody2D"]
position = Vector2(540, 540)
mass = 0.63
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_2mulq")

[node name="Polyline2D" type="Node2D" parent="."]
script = ExtResource("2_r6ng3")
color = Color(0, 1, 0, 1)
width = 4.0
antialiased = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 256
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 64.0
initial_velocity_max = 256.0
color = Color(0, 1, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
